fix bug file show page that flash obj is too small in ie

--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -182,6 +182,7 @@ body
   .container
     padding: 30px 10px 20px
     .pull-right
+      display: none
       text-align: right
       line-height: 30px
       a
